[tool.poetry]
name = "py_yelets"
version = "0.1.0"
description = ""
authors = ["Alexander Ryzhov <thed4rkof@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
